--- a/src/components/Tag/Tag.module.css
+++ b/src/components/Tag/Tag.module.css
@@ -1,9 +1,8 @@
 .root {
   display: flex;
+  align-items: center;
 }
 
 .icon {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
+  margin-right: var(--unit);
 }
