--- a/src/components/Icon/Icon.module.css
+++ b/src/components/Icon/Icon.module.css
@@ -1,3 +1,12 @@
 .root {
-  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 18px;
+  height: 18px;
+  color: currentColor;
+}
+
+.root svg {
+  fill: currentColor;
 }
