--- a/src/components/OrganizationPage/OrganizationPage.module.css
+++ b/src/components/OrganizationPage/OrganizationPage.module.css
@@ -15,6 +15,7 @@
 .image {
   display: block;
   max-width: 100%;
+  border-radius: var(--border-radius);
 }
 
 .info {
@@ -22,5 +23,9 @@
 }
 
 .title {
-  margin-bottom: var(--unit-2x);
+  margin-bottom: var(--unit-3x);
+}
+
+.location {
+  margin-bottom: var(--unit);
 }
