--- a/src/components/PinnedRepositoryList/PinnedRepositoryList.module.css
+++ b/src/components/PinnedRepositoryList/PinnedRepositoryList.module.css
@@ -15,7 +15,7 @@
   flex-direction: column;
   height: 150px;
   border: 1px solid var(--color-gray-2);
-  border-radius: var(--border-radius-medium);
+  border-radius: var(--border-radius);
 }
 
 .item:not(:last-child) {
