Improved Tag component styles

--- a/src/components/LanguageTag/LanguageTag.module.css
+++ b/src/components/LanguageTag/LanguageTag.module.css
@@ -1,8 +1,20 @@
 .root {
   display: flex;
+  align-items: center;
 }
 
 .icon {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 1px;
+  width: 16px;
+  height: 18px;
+  margin-right: var(--unit);
+}
+
+.circle {
   width: 10px;
   height: 10px;
   border-radius: 50%;
