--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,9 +1,9 @@
 .root {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: var(--font-size);
   line-height: 1.25;
   margin: var(--unit-8x) auto;
-  max-width: 800px; /* 1100 */
+  max-width: 1100px;
   background-color: var(--color-white);
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
