--- a/src/components/PinnedRepositoryList/PinnedRepositoryList.module.css
+++ b/src/components/PinnedRepositoryList/PinnedRepositoryList.module.css
@@ -2,6 +2,10 @@
   padding: var(--unit-5x);
 }
 
+.title {
+  margin-bottom: var(--unit-5x);
+}
+
 .list {
   margin: 0;
   padding: 0;
@@ -10,22 +14,47 @@
 }
 
 .item {
-  flex: 1;
+  position: relative;
+  box-sizing: border-box;
+  flex-basis: 100%;
   display: flex;
   flex-direction: column;
-  height: 150px;
-  border: 1px solid var(--color-gray-2);
+  padding: var(--unit-3x) var(--unit-4x);
+  height: 175px;
+  border: 1px solid var(--color-gray-3);
   border-radius: var(--border-radius);
+}
+
+.item:hover {
+  background-color: var(--color-gray-4);
+}
+
+.item:active,
+.item:focus {
+  background-color: var(--color-gray-3);
 }
 
 .item:not(:last-child) {
   margin-right: var(--unit-5x);
 }
 
+.itemTitle {
+  margin-bottom: var(--unit-3x);
+}
+
 .main {
   margin-bottom: auto;
+  overflow: auto;
 }
 
 .tags {
   display: flex;
+}
+
+.tagLink {
+  position: relative;
+}
+
+.tag:not(:last-child) {
+  margin-right: var(--unit-4x);
 }
