--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -7,23 +7,28 @@
 }
 
 .size-body {
-  font-size: 14px;
+  font-size: 15px;
+  color: var(--color-gray-1);
 }
 
 .size-h1 {
-  font-size: 21px;
+  font-size: 23px;
+  color: var(--color-gray);
 }
 
 .size-h2 {
-  font-size: 18px;
+  font-size: 20px;
+  color: var(--color-gray);
 }
 
 .size-h3 {
-  font-size: 16px;
+  font-size: 17px;
+  color: var(--color-gray);
 }
 
 .size-small {
-  font-size: 12px;
+  font-size: 13px;
+  color: var(--color-gray-2);
 }
 
 .color-primary {
@@ -31,5 +36,5 @@
 }
 
 .color-secondary {
-  color: var(--color-gray-1);
+  color: var(--color-gray-2);
 }
