--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,6 +1,7 @@
 .root {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: var(--font-size);
+  color: var(--color-gray-1);
   line-height: 1.25;
   margin: var(--unit-8x) auto;
   max-width: 1100px;
