--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,10 +1,16 @@
 .root {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: var(--font-size);
-  color: var(--color-gray-1);
-  line-height: 1.25;
-  margin: var(--unit-8x) auto;
+  box-sizing: border-box;
+  min-height: 100%;
+  margin: auto;
+  padding: var(--unit-8x) 0;
   max-width: 1100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+}
+
+.content {
+  flex-grow: 1;
   background-color: var(--color-white);
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
