--- a/src/components/RepositoryList/RepositoryList.module.css
+++ b/src/components/RepositoryList/RepositoryList.module.css
@@ -4,11 +4,10 @@
 
 .title {
   padding: 0 var(--unit-5x);
-  margin-bottom: var(--unit-5x);
 }
 
 .list {
-  margin: 0;
+  margin: var(--unit-5x) 0 0;
   padding: 0;
   list-style-type: none;
 }
