--- a/src/global.css
+++ b/src/global.css
@@ -16,6 +16,7 @@
   --color-blue: #63a9f4;
   --color-blue-1: #2e81d9;
   --color-biege: #f7f5f4;
+  --color-biege-1: #dbd9d5;
 
   --border-radius-small: 2px;
   --border-radius: 4px;
