--- a/src/components/GradientPlaceholder/GradientPlaceholder.module.css
+++ b/src/components/GradientPlaceholder/GradientPlaceholder.module.css
@@ -5,15 +5,14 @@
   animation-name: placeHolderShimmer;
   animation-timing-function: linear;
   background-size: 600px 100%;
-  background-image:
-    linear-gradient(
-      to right,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0.5) 20%,
-      rgba(255, 255, 255, 0.7) 30%,
-      rgba(255, 255, 255, 0.5) 40%,
-      rgba(255, 255, 255, 0) 100%
-    );
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.5) 20%,
+    rgba(255, 255, 255, 0.7) 30%,
+    rgba(255, 255, 255, 0.5) 40%,
+    rgba(255, 255, 255, 0) 100%
+  );
   background-color: var(--color-gray-3);
   border-radius: var(--border-radius-small);
 }
