--- a/src/global.css
+++ b/src/global.css
@@ -21,7 +21,8 @@
   --border-radius-small: 2px;
   --border-radius: 4px;
 
-  --box-shadow: 0 0 1px 0px rgba(0, 0, 0, .05), 0 2px 4px 0px rgba(0, 0, 0, .05);
+  --box-shadow: 0 0 1px 0px rgba(0, 0, 0, 0.05),
+    0 2px 4px 0px rgba(0, 0, 0, 0.05);
 
   --font-size: 14px;
 }
